syntax = "proto3";

package konzu;

option go_package = "/grpc";

// Definir el servicio LogisticsService
service KonzuService {  // Nombre debe coincidir
  rpc CreateOrder(Order) returns (OrderResponse);
  rpc CheckOrderStatus(OrderStatusRequest) returns (OrderStatusResponse);
}

// Mensajes usados en las Ã³rdenes y seguimiento
message Order {
  string client_name = 1;
  string item_name = 2;
  int32 quantity = 3;
  float value = 4;
  string destination = 5;
}

message OrderResponse {
  string order_id = 1;
  string message = 2;
}

message OrderStatusRequest {
  string order_id = 1;
}

message OrderStatusResponse {
  string order_id = 1;
  string status = 2;
  string message = 3;
}
